--- a/.gitignore
+++ b/.gitignore
@@ -171,13 +171,17 @@ dmypy.json
 .pyre/
 
 # ==========================================
-# Node (if you add JS tooling later)
+# Node (React Frontend)
 # ==========================================
 node_modules/
 package-lock.json
 yarn.lock
 .npm/
 .yarn/
+frontend/dist/
+frontend/node_modules/
+frontend/.vite/
+frontend/.cache/
 
 # ==========================================
 # Distribution / Packaging
