--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,20 @@
 # Example environment variables
+
+# AWS Bedrock Configuration
 AWS_ACCESS_KEY_ID=your_aws_access_key_here
 AWS_SECRET_ACCESS_KEY=your_aws_secret_key_here
 AWS_REGION=us-east-1
+
+# Tavily API Key
 TAVILY_API_KEY=your_tavily_api_key_here
+
+# ROOT_PATH - Critical for production deployment behind nginx!
+# Set this to match your nginx location path
+# Examples:
+#   - Root deployment (https://domain.com/):           ROOT_PATH=/
+#   - Subpath deployment (https://domain.com/app/):   ROOT_PATH=/app
+#   - Your case (https://domain.com/langgraphplayground/): ROOT_PATH=/langgraphplayground
+# 
+# For local development (no nginx), leave commented out or set to /
+# For production with nginx subpath, MUST match nginx location!
+ROOT_PATH=/langgraphplayground
