--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     
     # Health check
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:2024/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:2024/langgraphplayground/health"]
       interval: 30s
       timeout: 10s
       retries: 3
